--- a/Net5Ids4/NetOpenIdDict.csproj
+++ b/Net5Ids4/NetOpenIdDict.csproj
@@ -24,6 +24,9 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
     <PackageReference Include="Npgsql" Version="5.0.0" />
+    <PackageReference Include="OpenIddict" Version="3.0.2" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="3.0.2" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.0.2" />
   </ItemGroup>
 
 </Project>
