--- a/XamarinJwtAuth/XamarinJwtAuth/XamarinJwtAuth.csproj
+++ b/XamarinJwtAuth/XamarinJwtAuth/XamarinJwtAuth.csproj
@@ -15,6 +15,14 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
-    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+    <PackageReference Include="System.Text.Json" Version="6.0.1" />
+    <PackageReference Include="IdentityModel" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="IdentityModel" />
+    <None Remove="Exceptions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
