Attempting to use OidcClient for streamlining the login process.  No token coming back at the end of the process.  Not sure if it's because the OidcServer isn't returning anything or if the OidcClient doesn't want to work with OpenIddict. Going back to parent branch to finish the implementation to see if we can get a fully auth cycle.  The only reason I want the OidcClient library is just to make the logout work as WebAuthenticator doesn't really support it yet.

--- a/XamarinJwtAuth/XamarinJwtAuth/XamarinJwtAuth.csproj
+++ b/XamarinJwtAuth/XamarinJwtAuth/XamarinJwtAuth.csproj
@@ -17,12 +17,16 @@
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
+    <PackageReference Include="IdentityModel.OidcClient" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="IdentityModel" />
     <None Remove="Exceptions\" />
+    <None Remove="Oicd\" />
+    <None Remove="IdentityModel.OidcClient" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Exceptions\" />
+    <Folder Include="Oicd\" />
   </ItemGroup>
 </Project>
